src/libqmetaobject.bf

public struct QMetaProperty
{
	[LinkName("QMetaProperty_new")]
	public static extern void* QMetaProperty_new(QMetaProperty other);
	[LinkName("QMetaProperty_new2")]
	public static extern void* QMetaProperty_new2(QMetaProperty other);
	[LinkName("QMetaProperty_new3")]
	public static extern void* QMetaProperty_new3();
	[LinkName("QMetaProperty_Name")]
	public static extern char8[] QMetaProperty_Name(void* c_this);
	[LinkName("QMetaProperty_TypeName")]
	public static extern char8[] QMetaProperty_TypeName(void* c_this);
	[LinkName("QMetaProperty_Type")]
	public static extern int64 QMetaProperty_Type(void* c_this);
	[LinkName("QMetaProperty_UserType")]
	public static extern int32 QMetaProperty_UserType(void* c_this);
	[LinkName("QMetaProperty_TypeId")]
	public static extern int32 QMetaProperty_TypeId(void* c_this);
	[LinkName("QMetaProperty_MetaType")]
	public static extern QMetaType QMetaProperty_MetaType(void* c_this);
	[LinkName("QMetaProperty_PropertyIndex")]
	public static extern int32 QMetaProperty_PropertyIndex(void* c_this);
	[LinkName("QMetaProperty_RelativePropertyIndex")]
	public static extern int32 QMetaProperty_RelativePropertyIndex(void* c_this);
	[LinkName("QMetaProperty_IsReadable")]
	public static extern bool QMetaProperty_IsReadable(void* c_this);
	[LinkName("QMetaProperty_IsWritable")]
	public static extern bool QMetaProperty_IsWritable(void* c_this);
	[LinkName("QMetaProperty_IsResettable")]
	public static extern bool QMetaProperty_IsResettable(void* c_this);
	[LinkName("QMetaProperty_IsDesignable")]
	public static extern bool QMetaProperty_IsDesignable(void* c_this);
	[LinkName("QMetaProperty_IsScriptable")]
	public static extern bool QMetaProperty_IsScriptable(void* c_this);
	[LinkName("QMetaProperty_IsStored")]
	public static extern bool QMetaProperty_IsStored(void* c_this);
	[LinkName("QMetaProperty_IsUser")]
	public static extern bool QMetaProperty_IsUser(void* c_this);
	[LinkName("QMetaProperty_IsConstant")]
	public static extern bool QMetaProperty_IsConstant(void* c_this);
	[LinkName("QMetaProperty_IsFinal")]
	public static extern bool QMetaProperty_IsFinal(void* c_this);
	[LinkName("QMetaProperty_IsRequired")]
	public static extern bool QMetaProperty_IsRequired(void* c_this);
	[LinkName("QMetaProperty_IsBindable")]
	public static extern bool QMetaProperty_IsBindable(void* c_this);
	[LinkName("QMetaProperty_IsFlagType")]
	public static extern bool QMetaProperty_IsFlagType(void* c_this);
	[LinkName("QMetaProperty_IsEnumType")]
	public static extern bool QMetaProperty_IsEnumType(void* c_this);
	[LinkName("QMetaProperty_Enumerator")]
	public static extern QMetaEnum QMetaProperty_Enumerator(void* c_this);
	[LinkName("QMetaProperty_HasNotifySignal")]
	public static extern bool QMetaProperty_HasNotifySignal(void* c_this);
	[LinkName("QMetaProperty_NotifySignal")]
	public static extern QMetaMethod QMetaProperty_NotifySignal(void* c_this);
	[LinkName("QMetaProperty_NotifySignalIndex")]
	public static extern int32 QMetaProperty_NotifySignalIndex(void* c_this);
	[LinkName("QMetaProperty_Revision")]
	public static extern int32 QMetaProperty_Revision(void* c_this);
	[LinkName("QMetaProperty_Read")]
	public static extern QVariant QMetaProperty_Read(void* c_this, QObject obj);
	[LinkName("QMetaProperty_Write")]
	public static extern bool QMetaProperty_Write(void* c_this, QObject obj, QVariant value);
	[LinkName("QMetaProperty_Reset")]
	public static extern bool QMetaProperty_Reset(void* c_this, QObject obj);
	[LinkName("QMetaProperty_Bindable")]
	public static extern QUntypedBindable QMetaProperty_Bindable(void* c_this, QObject object);
	[LinkName("QMetaProperty_ReadOnGadget")]
	public static extern QVariant QMetaProperty_ReadOnGadget(void* c_this, void gadget);
	[LinkName("QMetaProperty_WriteOnGadget")]
	public static extern bool QMetaProperty_WriteOnGadget(void* c_this, void gadget, QVariant value);
	[LinkName("QMetaProperty_ResetOnGadget")]
	public static extern bool QMetaProperty_ResetOnGadget(void* c_this, void gadget);
	[LinkName("QMetaProperty_HasStdCppSet")]
	public static extern bool QMetaProperty_HasStdCppSet(void* c_this);
	[LinkName("QMetaProperty_IsAlias")]
	public static extern bool QMetaProperty_IsAlias(void* c_this);
	[LinkName("QMetaProperty_IsValid")]
	public static extern bool QMetaProperty_IsValid(void* c_this);
	[LinkName("QMetaProperty_EnclosingMetaObject")]
	public static extern QMetaObject QMetaProperty_EnclosingMetaObject(void* c_this);
}
public struct QMetaClassInfo
{
	[LinkName("QMetaClassInfo_new")]
	public static extern void* QMetaClassInfo_new(QMetaClassInfo other);
	[LinkName("QMetaClassInfo_new2")]
	public static extern void* QMetaClassInfo_new2(QMetaClassInfo other);
	[LinkName("QMetaClassInfo_new3")]
	public static extern void* QMetaClassInfo_new3();
	[LinkName("QMetaClassInfo_Name")]
	public static extern char8[] QMetaClassInfo_Name(void* c_this);
	[LinkName("QMetaClassInfo_Value")]
	public static extern char8[] QMetaClassInfo_Value(void* c_this);
	[LinkName("QMetaClassInfo_EnclosingMetaObject")]
	public static extern QMetaObject QMetaClassInfo_EnclosingMetaObject(void* c_this);
}